--- a/style.css
+++ b/style.css
@@ -190,9 +190,15 @@ body {
     flex-direction: row;
   }
 
-  #btn {
+  #btn, #gender{
     flex-direction: row;
     align-items: flex-start;
+  }
+  #hobbies{
+    display:inline-block;
+    /* float:inline-start; */
+    width: 30%;
+    
   }
 }
 
