--- a/style.css
+++ b/style.css
@@ -8,9 +8,24 @@
 }
 
 body {
-  background: linear-gradient(to bottom right, #fe1e50 0%, #282881 100%);
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
   padding: 0 10px;
 }
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
 
 .wrapper {
   max-width: 600px;
